[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Arena.gd" type="Script" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/power/PowerReload.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Cam.gd" type="Script" id=5]
[ext_resource path="res://scenes/enemy/EnemyRed.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enemy/EnemyGreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/power/PowerDamage.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sprites/ui/btn_pause_normal.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/ui/btn_pause_hover.png" type="Texture" id=11]

[node name="Arena" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
Enemies = [ ExtResource( 6 ), ExtResource( 7 ) ]
Powers = [ ExtResource( 4 ), ExtResource( 8 ) ]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Pause" parent="." instance=ExtResource( 9 )]
offset = Vector2( 320, 0 )
transform = Transform2D( 1, 0, 0, 1, 320, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 90 )

[node name="Cam" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true
script = ExtResource( 5 )

[node name="ShakeTimer" type="Timer" parent="Cam"]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="DifficultySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="PowerSpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="btnPause" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -15.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 13.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Cam/ShakeTimer" to="Cam" method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="DifficultySpawnTimer" to="." method="_on_DifficultySpawnTimer_timeout"]
[connection signal="timeout" from="PowerSpawnTimer" to="." method="_on_PowerSpawnTimer_timeout"]
[connection signal="pressed" from="btnPause" to="Pause" method="_on_btnPause_pressed"]
